--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -1,5 +1,20 @@
 <app-topbar></app-topbar>
 <div class="main-container">
     <app-sidebar></app-sidebar>
-    <div class="content"></div>
+    <div class="content">
+        <div class="default-panel">
+
+            <div class="hot-panel">
+                <h2>250</h2><span class="white"><i class="fa fa-caret-up"></i>+ 5%</span>
+                <br/> Products Sold
+                <br/>
+                <br/>
+                <i class="fa fa-clock-o"></i> Updated : <span class="white">9:30 PM</span>
+            </div>
+            <div class="hot-panel"></div>
+            <div class="hot-panel"></div>
+            <div class="hot-panel"></div>
+        </div>
+
+    </div>
 </div>
