--- a/src/app/components/common/sidebar/sidebar.component.html
+++ b/src/app/components/common/sidebar/sidebar.component.html
@@ -1,14 +1,22 @@
 <ul class="sidebar">
-    <li>
-        <i class="fa fa-home"></i> Dashboard
+    <li class="active">
+        <a href="#">
+            <i class="fa fa-home"></i> Dashboard
+        </a>
     </li>
     <li>
-        <i class="fa fa-balance-scale"></i> Finance Report
+        <a href="#">
+            <i class="fa fa-balance-scale"></i> Finance Report
+        </a>
     </li>
     <li>
-        <i class="fa fa-user-o"></i> Vendors
+        <a href="#">
+            <i class="fa fa-user-o"></i> Vendors
+        </a>
     </li>
     <li>
-        <i class="fa fa-truck"></i> Shipping Schedule
+        <a href="#">
+            <i class="fa fa-truck"></i> Shipping Schedule
+        </a>
     </li>
 </ul>
