--- a/src/app/styles/common/_sidebar.scss
+++ b/src/app/styles/common/_sidebar.scss
@@ -7,11 +7,18 @@
 }
 
 li {
-    padding: 5px 20px;
+    padding: 5px 0px;
     color: #FFFFFF;
+    &.active {
+        border-right: 5px solid #f6a821;
+        a {
+            display: block;
+        }
+    }
 }
 
 i {
     color: #f6a821;
     width: 30px;
+    margin-left: 20px;
 }
