sidebar navigation highlights

--- a/src/app/components/common/sidebar/sidebar.component.html
+++ b/src/app/components/common/sidebar/sidebar.component.html
@@ -1,22 +1,47 @@
 <ul class="sidebar">
-    <li class="active">
-        <a href="#">
+    <li id="dashboard">
+        <a routerLink="/home">
             <i class="fa fa-home"></i> Dashboard
         </a>
     </li>
-    <li>
-        <a href="#">
+    <li id="finance">
+        <a routerLink="/finance">
             <i class="fa fa-balance-scale"></i> Finance Report
         </a>
     </li>
-    <li>
-        <a href="#">
+    <li id="products">
+        <a routerLink="/products">
+            <i class="fa fa-cutlery"></i> Products
+        </a>
+    </li>
+    <li id="branches">
+        <a routerLink="/branches">
+            <i class="fa fa-building-o"></i> Branch Information
+        </a>
+    </li>
+    <li id="vendors">
+        <a routerLink="/vendors">
             <i class="fa fa-user-o"></i> Vendors
         </a>
     </li>
-    <li>
-        <a href="#">
+    <li id="shipping">
+        <a routerLink="/shipping">
             <i class="fa fa-truck"></i> Shipping Schedule
+        </a>
+    </li>
+    <li id="shareholders">
+        <a routerLink="/shareholders">
+            <i class="fa fa-sitemap"></i> Shareholder Info
+        </a>
+    </li>
+    <li id="digital-analytics">
+        <a routerLink="/digital-analytics">
+            <i class="fa fa-line-chart"></i> Digital Analytics
+        </a>
+    </li>
+    <li id="loyalty">
+        <a routerLink="/loyalty">
+            <i class="fa fa-id-card-o"></i> Loyalty System
         </a>
     </li>
 </ul>
