--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -5,15 +5,37 @@
         <div class="default-panel">
 
             <div class="hot-panel">
-                <h2>250</h2><span class="white"><i class="fa fa-caret-up"></i>+ 5%</span>
-                <br/> Products Sold
+                <h2>1,250</h2>
+                <br/> Total Products Sold
                 <br/>
                 <br/>
                 <i class="fa fa-clock-o"></i> Updated : <span class="white">9:30 PM</span>
             </div>
-            <div class="hot-panel"></div>
-            <div class="hot-panel"></div>
-            <div class="hot-panel"></div>
+            <div class="hot-panel">
+                <h2>Rp.3,750,000.00</h2>
+                <br/> Total Gross Incomes
+                <br/>
+                <br/>
+                <i class="fa fa-clock-o"></i> Updated : <span class="white">9:30 PM</span>
+            </div>
+            <div class="hot-panel">
+                <h2>250</h2>
+                <br/>
+                <span class="white"><i class="fa fa-caret-up"></i>+ 5% from yesterday</span>
+                <br/> Daily Products Sold
+                <br/>
+                <br/>
+                <i class="fa fa-clock-o"></i> Updated : <span class="white">9:30 PM</span>
+            </div>
+            <div class="hot-panel">
+                <h2>rp.750,000.00</h2>
+                <br/>
+                <span class="white"><i class="fa fa-caret-up"></i>+ 5% from yesterday</span>
+                <br/> Daily Gross Incomes
+                <br/>
+                <br/>
+                <i class="fa fa-clock-o"></i> Updated : <span class="white">9:30 PM</span>
+            </div>
         </div>
 
     </div>
