--- a/src/app/components/pages/product/product.component.html
+++ b/src/app/components/pages/product/product.component.html
@@ -2,6 +2,108 @@
 <div class="main-container">
     <app-sidebar></app-sidebar>
     <div class="content">
-        I am product
+        <div class="default-panel">
+            <h2>Top Products</h2>
+            <div class="top-product-panel">
+                <div class="product-image">
+                    <img src="./../../../../assets/products/pisangkipas.jpg" />
+                </div>
+                <div class="product-description">
+                    <h3>Pisang Kipas</h3>
+                    <table>
+                        <tbody>
+                            <tr>
+                                <td>Total Sold</td>
+                                <td>:</td>
+                                <td class="currency">200 / 200</td>
+                            </tr>
+                            <tr>
+                                <td>Sold Percentage</td>
+                                <td>:</td>
+                                <td class="currency">100%</td>
+                            </tr>
+                            <tr>
+                                <td>Total Income</td>
+                                <td>:</td>
+                                <td class="currency">Rp.600,000.00 </td>
+                            </tr>
+                            <tr>
+                                <td>Total Nett</td>
+                                <td>:</td>
+                                <td class="currency">Rp.320,000.00</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <div class="top-product-panel">
+                <div class="product-image">
+                    <img src="./../../../../assets/products/brownies.jpg" />
+                </div>
+                <div class="product-description">
+                    <h3>Brownies Nutella</h3>
+                    <table>
+                        <tbody>
+                            <tr>
+                                <td>Total Sold</td>
+                                <td>:</td>
+                                <td class="currency">200 / 200</td>
+                            </tr>
+                            <tr>
+                                <td>Sold Percentage</td>
+                                <td>:</td>
+                                <td class="currency">100%</td>
+                            </tr>
+                            <tr>
+                                <td>Total Income</td>
+                                <td>:</td>
+                                <td class="currency">Rp.600,000.00 </td>
+                            </tr>
+                            <tr>
+                                <td>Total Nett</td>
+                                <td>:</td>
+                                <td class="currency">Rp.320,000.00</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <div class="top-product-panel">
+                <div class="product-image">
+                    <img src="./../../../../assets/products/pastel.jpg" />
+                </div>
+                <div class="product-description">
+                    <h3>Pastel Kentang</h3>
+                    <table>
+                        <tbody>
+                            <tr>
+                                <td>Total Sold</td>
+                                <td>:</td>
+                                <td class="currency">200 / 200</td>
+                            </tr>
+                            <tr>
+                                <td>Sold Percentage</td>
+                                <td>:</td>
+                                <td class="currency">100%</td>
+                            </tr>
+                            <tr>
+                                <td>Total Income</td>
+                                <td>:</td>
+                                <td class="currency">Rp.600,000.00 </td>
+                            </tr>
+                            <tr>
+                                <td>Total Nett</td>
+                                <td>:</td>
+                                <td class="currency">Rp.320,000.00</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+
+        <div class="default-panel">
+            <h2>Products</h2>
+        </div>
     </div>
 </div>
