datatable filter function!

--- a/src/app/components/pages/product/product.component.html
+++ b/src/app/components/pages/product/product.component.html
@@ -104,6 +104,28 @@
 
         <div class="default-panel">
             <h2>Products</h2>
+            <table class="product">
+                <thead>
+                    <tr>
+                        <th width="80">Thumbnail</th>
+                        <th>Name <i class="fa fa-sort" (click)="sortData('name')"></i></th>
+                        <th width="100">Base Price <i class="fa fa-sort" (click)="sortData('base_price')"></i></th>
+                        <th width="100">Selling Price <i class="fa fa-sort" (click)="sortData('selling_price')"></i></th>
+                        <th width="80">Total Sold <i class="fa fa-sort" (click)="sortData('total_sold')"></i></th>
+                        <th width="100">Total Profit <i class="fa fa-sort" (click)="sortData('total_profit')"></i></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let product of products">
+                        <td class="text-left"><img src="./../../../../assets/products/{{product.thumbnail}}" class="thumbnail" /> </td>
+                        <td class="text-left">{{ product.name | titlecase }}</td>
+                        <td class="currency">{{ product.base_price | currency:'IDR':'symbol-narrow':'1.2-3' }}</td>
+                        <td class="currency">{{ product.selling_price | currency:'IDR':'symbol-narrow':'1.2-3' }}</td>
+                        <td class="text-center">{{ product.total_sold }}</td>
+                        <td class="currency">{{ product.total_profit | currency:'IDR':'symbol-narrow':'1.2-3'}}</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
