--- a/src/app/styles/_all.scss
+++ b/src/app/styles/_all.scss
@@ -71,3 +71,11 @@ ul {
     letter-spacing: 1px;
     text-align: right !important;
 }
+
+.text-left {
+    text-align: left;
+}
+
+.text-center {
+    text-align: center;
+}
