--- a/src/app/styles/pages/_product.scss
+++ b/src/app/styles/pages/_product.scss
@@ -1,5 +1,37 @@
 .default-panel {
     text-align: center;
+    table {
+        border-spacing: 0px;
+        margin-top: 10px;
+        width: 100%;
+        &.product {
+            width: auto;
+            margin: 10px auto;
+            .fa {
+                &:hover {
+                    cursor: pointer;
+                }
+            }
+            thead {
+                text-align: center;
+            }
+            tbody {
+                tr {
+                    &:nth-of-type(odd) {
+                        background-color: #44464f;
+                    }
+                    &:first-child {
+                        // background-color: transparent;
+                    }
+                    td {
+                        padding: 5px 0px;
+                        color: #949ba2;
+                        border-top: 1px solid #3d404c;
+                    }
+                }
+            }
+        }
+    }
 }
 
 .top-product-panel {
@@ -31,4 +63,9 @@
         width: 100%;
         height: 100%;
     }
+}
+
+.thumbnail {
+    width: 60px;
+    height: 40px;
 }
