--- a/src/app/styles/pages/_product.scss
+++ b/src/app/styles/pages/_product.scss
@@ -1,5 +1,13 @@
 .default-panel {
     text-align: center;
+    &.product {
+        h2 {
+            padding: 10px 0px;
+            background-color: #2a2d35;
+            border-top-left-radius: 4px;
+            border-top-right-radius: 4px;
+        }
+    }
     table {
         border-spacing: 0px;
         margin-top: 10px;
@@ -7,6 +15,18 @@
         &.product {
             width: auto;
             margin: 10px auto;
+            input {
+                color: white;
+                text-align: left;
+                width: 90%;
+                border-radius: 2px;
+                border: none;
+                border-bottom: 1px solid #f6a821;
+                background-color: transparent;
+            }
+            input[type='checkbox'] {
+                width: auto;
+            }
             .fa {
                 &:hover {
                     cursor: pointer;
@@ -27,6 +47,9 @@
                         padding: 5px 0px;
                         color: #949ba2;
                         border-top: 1px solid #3d404c;
+                        &.currency {
+                            padding-right: 10px;
+                        }
                     }
                 }
             }
@@ -68,4 +91,23 @@
 .thumbnail {
     width: 60px;
     height: 40px;
+}
+
+button {
+    &:hover {
+        cursor: pointer;
+    }
+    &.add {
+        padding: 5px 0px;
+        border: none;
+        box-shadow: 1px 1px 10px #30333c;
+        background-color: #273E47;
+        letter-spacing: 1px;
+        color: white;
+        width: 90%;
+    }
+}
+
+.fa.fa-trash-o {
+    color: #A4243B;
 }
