--- a/src/app/components/pages/product/product.component.html
+++ b/src/app/components/pages/product/product.component.html
@@ -103,6 +103,10 @@
         </div>
 
         <div class="default-panel product">
+            <div class="search-bar">
+                <i class="fa fa-search"></i>
+                <input type="text" [(ngModel)]="productSearch" (keyup)="triggerProductSearch($event)" placeholder="Enter related keywords" />
+            </div>
             <h2>
                 <span class="force-left">
                     <i class="fa fa-trash-o" (click)="deleteProducts()"></i>
