--- a/src/app/styles/pages/_product.scss
+++ b/src/app/styles/pages/_product.scss
@@ -50,7 +50,6 @@
                     td {
                         padding: 5px 0px;
                         color: #949ba2;
-                        border-top: 1px solid #3d404c;
                         &.currency {
                             padding-right: 10px;
                         }
@@ -133,5 +132,30 @@ button {
         background-color: white;
         border-radius: 50%;
         padding: 2px 4px;
+    }
+}
+
+.search-bar {
+    text-align: left;
+    margin-bottom: 5px;
+    margin-left: 5px;
+    .fa.fa-search {
+        background-color: white;
+        height: 21px;
+        vertical-align: top;
+        padding-top: 3px;
+        padding-left: 3px;
+        padding-right: 3px;
+        border-top-left-radius: 4px;
+        border-bottom-left-radius: 4px;
+    }
+    input:not([type=checkbox]) {
+        color: white;
+        background-color: #44464f;
+        height: 22px;
+        text-align: left;
+        border: none;
+        border-bottom: 1px solid #f6a821;
+        border-top-right-radius: 4px;
     }
 }
