Login and register page

--- a/src/app/components/pages/login/login.component.html
+++ b/src/app/components/pages/login/login.component.html
@@ -1,3 +1,33 @@
-<p>
-  login works!
-</p>
+<div class="main-wrapper">
+    <div class="center-panel">
+        <div class="login-header">
+            <div class="login-header-icon">
+                <i class="fa fa-circle-o-notch"></i>
+            </div>
+            <div class="login-header-title">
+                <h2>Login</h2>
+                <h4>Please enter your credentials to login.</h4>
+            </div>
+        </div>
+        <table>
+            <tr>
+                <td>Username</td>
+            </tr>
+            <tr>
+                <td class="input"><input type="text" placeholder="username"></td>
+            </tr>
+            <tr>
+                <td>Password</td>
+            </tr>
+            <tr>
+                <td class="input"><input type="password" placeholder="*****"></td>
+            </tr>
+            <tr>
+                <td>
+                    <button class="login">Login</button>
+                    <button class="register">Register</button>
+                </td>
+            </tr>
+        </table>
+    </div>
+</div>
