--- a/src/app/components/pages/register/register.component.html
+++ b/src/app/components/pages/register/register.component.html
@@ -1,3 +1,46 @@
-<p>
-  register works!
-</p>
+<div class="main-wrapper">
+    <div class="center-panel">
+        <div class="register-header">
+            <div class="register-header-icon">
+                <i class="fa fa-address-book-o"></i>
+            </div>
+            <div class="register-header-title">
+                <h2>Register</h2>
+                <h4>Please enter your data to register.</h4>
+            </div>
+        </div>
+        <table>
+            <tr>
+                <td>Username</td>
+            </tr>
+            <tr>
+                <td class="input"><input type="text" placeholder="username"></td>
+            </tr>
+            <tr>
+                <td>Password</td>
+            </tr>
+            <tr>
+                <td class="input"><input type="password" placeholder="*****"></td>
+            </tr>
+
+            <tr>
+                <td>Repeat Password</td>
+            </tr>
+            <tr>
+                <td class="input"><input type="password" placeholder="*****"></td>
+            </tr>
+
+            <tr>
+                <td>Admin Pin</td>
+            </tr>
+            <tr>
+                <td class="input"><input type="password" placeholder="*****"></td>
+            </tr>
+            <tr>
+                <td>
+                    <button class="register">Register</button>
+                </td>
+            </tr>
+        </table>
+    </div>
+</div>
