modal is done, further enhancement needed

--- a/src/app/styles/_all.scss
+++ b/src/app/styles/_all.scss
@@ -1,5 +1,6 @@
 @import 'variables';
 @import './helpers/typography';
+@import './common/modal';
 body,
 input {
     font-family: 'Encode Sans Condensed', sans-serif;
