--- a/src/app/styles/common/_notification.scss
+++ b/src/app/styles/common/_notification.scss
@@ -23,7 +23,7 @@
         text-align: center;
         width: 300px;
         &.success {
-            background-color: #16DB93;
+            background-color: #4DA1A9;
             color: white;
         }
         &.error {
