--- a/src/app/components/pages/product/product.component.html
+++ b/src/app/components/pages/product/product.component.html
@@ -1,3 +1,19 @@
+<div class="modal-wrapper" *ngIf="isDeleteProductModalOpen">
+    <div class="modal-outer" (click)="dismissDeleteProductsModal()"></div>
+    <div class="modal warning">
+        <div class="title">
+            <h2>Delete Selected Products ?</h2>
+        </div>
+        <div class="body">
+            <p>Are you sure to delete these selected products ? Select confirm to proceed and cancel to abort</p>
+        </div>
+        <div class="footer">
+            <button class="confirm" (click)="confirmDeleteProductsModal()">Confirm</button>
+            <button class="cancel" (click)="dismissDeleteProductsModal()">Cancel</button>
+        </div>
+    </div>
+</div>
+
 <app-topbar></app-topbar>
 <div class="main-container">
     <app-sidebar></app-sidebar>
@@ -109,7 +125,7 @@
             </div>
             <h2>
                 <span class="force-left">
-                    <i class="fa fa-trash-o" (click)="deleteProducts()"></i>
+                    <i class="fa fa-trash-o" (click)="showDeleteProductsModal()"></i>
                 </span> Products
             </h2>
             <table class="product">
