--- a/src/app/styles/pages/_product.scss
+++ b/src/app/styles/pages/_product.scss
@@ -97,6 +97,7 @@
 }
 
 button {
+    font-size: 14px;
     &:hover {
         cursor: pointer;
     }
@@ -104,7 +105,7 @@ button {
         padding: 5px 0px;
         border: none;
         box-shadow: 1px 1px 10px #30333c;
-        background-color: #273E47;
+        background-color: #f6a821;
         letter-spacing: 1px;
         color: white;
         width: 90%;
