--- a/src/app/components/common/topbar/topbar.component.html
+++ b/src/app/components/common/topbar/topbar.component.html
@@ -46,7 +46,9 @@
 
                 <ul class="setting-content" id="setting-content" style="display: none;">
                     <li>
-                        <i class="fa fa-key"></i> Change Password
+                        <a routerLink="/password/change">
+                            <i class="fa fa-key"></i> Change Password
+                        </a>
                     </li>
                     <li>
                         <i class="fa fa-sign-out"></i> Logout
