--- a/src/app/styles/pages/_product.scss
+++ b/src/app/styles/pages/_product.scss
@@ -136,13 +136,23 @@ button {
     }
 }
 
+.force-left {
+    position: absolute;
+    left: 0px;
+}
+
 .search-bar {
+    float: left;
     text-align: left;
-    margin-bottom: 5px;
-    margin-left: 5px;
+    margin-left: 45px;
+    margin-top: -2px;
+    position: absolute;
     .fa.fa-search {
+        vertical-align: middle;
         background-color: white;
         height: 21px;
+        margin-top: 5px;
+        font-size: 18px;
         vertical-align: top;
         padding-top: 3px;
         padding-left: 3px;
@@ -151,12 +161,18 @@ button {
         border-bottom-left-radius: 4px;
     }
     input:not([type=checkbox]) {
+        vertical-align: middle;
         color: white;
         background-color: #44464f;
         height: 22px;
         text-align: left;
+        font-size: 12px;
         border: none;
         border-bottom: 1px solid #f6a821;
         border-top-right-radius: 4px;
     }
+}
+
+h2 {
+    position: relative;
 }
