--- a/src/app/components/common/topbar/topbar.component.html
+++ b/src/app/components/common/topbar/topbar.component.html
@@ -38,7 +38,7 @@
                         <br/>
                         <span class="chat-content">How are you?</span>
                     </li>
-                    <li>See All Chats..</li>
+                    <li><a routerLink="/message">View All Chats</a></li>
                 </ul>
             </li>
             <li class="setting">
