--- a/src/app/styles/common/_topbar.scss
+++ b/src/app/styles/common/_topbar.scss
@@ -7,6 +7,7 @@ header {
     box-shadow: 0px 0px 21px #161616;
     min-height: 60px;
     font-size: 25px;
+    z-index: 10;
 }
 
 .logo-content {
@@ -46,7 +47,7 @@ header {
                     right: 10px;
                     margin-top: 5px;
                     font-size: 16px;
-                    background-color: #f6a821;
+                    background-color: #2a2d35;
                     color: white;
                     box-shadow: 2px 1px 10px #9c9c9c;
                     li {
@@ -70,7 +71,7 @@ header {
                     right: 10px;
                     margin-top: 5px;
                     font-size: 16px;
-                    background-color: #f6a821;
+                    background-color: #2a2d35;
                     color: white;
                     box-shadow: 2px 1px 10px #9c9c9c;
                     li {
@@ -94,7 +95,7 @@ header {
                     right: 10px;
                     margin-top: 5px;
                     font-size: 16px;
-                    background-color: #f6a821;
+                    background-color: #2a2d35;
                     color: white;
                     box-shadow: 2px 1px 10px #9c9c9c;
                     li {
