chat desktop UI completed

--- a/src/app/components/pages/chatbox/chatbox.component.html
+++ b/src/app/components/pages/chatbox/chatbox.component.html
@@ -10,7 +10,13 @@
                         <p>{{friend.lastMessage}}</p>
                     </li>
                 </ul>
-                <div class="search"></div>
+                <div class="search">
+                    <h4>Search Friend</h4>
+                    <div class="search-box">
+                        <input type="text">
+                        <i class="fa fa-search"></i>
+                    </div>
+                </div>
             </div>
             <div class="chat-area">
                 <h3 id="chatter-name">{{chatTarget.name | titlecase}}</h3>
