multiple component state handling using observable and subscribe

--- a/src/app/components/common/topbar/topbar.component.html
+++ b/src/app/components/common/topbar/topbar.component.html
@@ -3,7 +3,7 @@
         <div class="logo">Logo</div>
     </div>
     <div class="topbar-content">
-        <i class="fa fa-bars"></i>
+        <i class="fa fa-bars" (click)="changeNavigationSliderState()"></i>
         <ul>
             <li class="notification">
                 <i class="fa fa-bell" (click)="triggerContent('notification')"></i>
