--- a/src/app/components/common/sidebar/sidebar.component.html
+++ b/src/app/components/common/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<ul class="sidebar">
+<ul class="sidebar" id="sidebar">
     <li id="dashboard">
         <a routerLink="/home">
             <i class="fa fa-home"></i> Dashboard
