--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <app-topbar></app-topbar>
 <div class="main-container">
     <app-sidebar></app-sidebar>
-    <div class="content">
+    <div class="content" id="content">
         <div class="default-panel">
 
             <div class="hot-panel">
