--- a/src/app/components/pages/product/product.component.html
+++ b/src/app/components/pages/product/product.component.html
@@ -17,7 +17,7 @@
 <app-topbar></app-topbar>
 <div class="main-container">
     <app-sidebar></app-sidebar>
-    <div class="content">
+    <div class="content" id="content">
         <div class="default-panel">
             <h2>Top Products</h2>
             <div class="top-product-panel">
