--- a/src/app/styles/pages/_product.scss
+++ b/src/app/styles/pages/_product.scss
@@ -185,3 +185,21 @@ button {
 h2 {
     position: relative;
 }
+
+@keyframes contentExpand {
+    0% {
+        width: calc(100vw - 200px);
+    }
+    100% {
+        width: 100vw;
+    }
+}
+
+@keyframes contentCollapse {
+    0% {
+        width: 100vw;
+    }
+    100% {
+        width: calc(100vw - 200px);
+    }
+}
